# AI_201-Batch_72-Q2-CAARE

./: README.md
assignments/: 01_uv_n8n.md  02_uv_project_setup.md  03_multi_agent_airline_customer_service.md  03_multi_agent_airline_customer_service_starter.py  03_n8n_level_01_course.md  04_hello_agent_openai_sdk.md  05_chatbot_with_chainlit.md  05_class08_20251005.md
class01_20250817/: Readme.md
class01_20250817/01_The_Rise_of_AI_Agents/: Readme.md
class01_20250817/03_traditional_ai_llms/: README.md
class01_20250817/04_getting_started_with_n8n/: Readme.md
class01_20250817/07-getting-started-openai-agents-sdk/01_sdk_simple_app/: Readme.md
class01_20250817/07-getting-started-openai-agents-sdk/02_sdk_packaged_app/: Readme.md
class02_20250824/: Readme.md
class02_20250824/02_n8n_basics/: Readme.md
class02_20250824/05-getting-started-openai-agents-sdk/02_sdk_packaged_app/agents_packaged/: pyproject.toml
class02_20250824/06_aysnc_programming/: Readme.md
class03_20250831/: Readme.md
class03_20250831/01_what_is_api/: README.md
class03_20250831/02-lang-lib-fw-sdk/: README.md
class03_20250831/04-getting-started-openai-agents-sdk/: README.md
class03_20250831/05_aysnc_programming/async-programming/: README.md  pyproject.toml
class04_20250907/: Readme.md
class04_20250907/01_aysnc_programming/: Readme.md
class04_20250907/02_sync_vs_async_agent_execution/: Readme.md
class04_20250907/02_sync_vs_async_agent_execution/sync-vs-async-agent-execution/: README.md  pyproject.toml
class04_20250907/02_sync_vs_async_agent_execution/sync-vs-async-agent-execution/src/sync_vs_async_agent_execution/: async_main.py  async_main_demo.py  main.py  sync_main.py  sync_main_demo.py
class04_20250907/03_model_configuration/: Readme.md
class04_20250907/03_model_configuration/model_configuration/: pyproject.toml
class04_20250907/03_model_configuration/model_configuration/src/model_configuration/: debug_mode_main.py  global_config_main.py  runner_config_main.py
class04_20250907/04_anthropic_design_patterns/: Readme.md
class05_20250914/: context_engineering_tutorial.md  readme.md  six_part_prompting_framework.md
class06_20250921/: Readme.md
class06_20250921/01_swarm/: Readme.md
class06_20250921/02_anthropic_design_patterns/: Readme.md
class06_20250921/03_python_decoratores/: Readme.md
class06_20250921/04_basic_tools/: main.py  pyproject.toml
class06_20250921/06_dataclasses_in_python/: README.md  main.py  pyproject.toml
class06_20250921/07_generics_in_python/: README.md  main.py  pyproject.toml
class06_20250921/09_callable_in_python/: main.py
class07_20250928/: Readme.md
class07_20250928/02_callable_in_python/: README.md  pyproject.toml
class07_20250928/04_streaming/: README.md
class07_20250928/05_agent_clone/: shallow_vs_deep_copy.md
class08_20251005/: Readme.md
class08_20251005/01_basic_tracing/: readme.md
class08_20251005/01_chatbot_using_chainlit/: Readme.md
class08_20251005/01_chatbot_using_chainlit/chatbot/: README.md  pyproject.toml
class08_20251005/01_chatbot_using_chainlit/chatbot/src/chatbot/: app.py
class08_20251005/02_agents_as_tool/: main.py
class08_20251005/03_basic_handsoff/: main.py
class08_20251005/05_advanced_handoffs/: 03_handoff_dynamic_permission.py
class09_20251012/03_basic_handsoff/: hello.py
class09_20251019/: Readme.md
class09_20251019/02_agents_as_tool/: main.py
class09_20251019/04_basic_handsoff/: hello.py  main.py  whatsapp_copywriter_start_pattern.py
class09_20251019/05_structured_output/: main1.py  main2.py  main3.py  pyproject.toml
class10_20251026/03_run_lifecycle/run_lifecycle/: pyproject.toml
class10_20251026/03_run_lifecycle/run_lifecycle/src/run_hooks/: __init__.py
class10_20251026/03_run_lifecycle/run_lifecycle/src/run_lifecycle/: main.py
class11_20251102/fast-api/: pyproject.toml
class11_20251102/fast-api/src/config/: __init__.py
class11_20251102/fast-api/src/fast_api/: __init__.py
class11_20251102/session_management/: README.md  conversation_history.db  pyproject.toml  sqlalchemy_sessions.db  sqlite_sessions.db
class11_20251102/session_management/src/config/: gemini_client.py
class11_20251102/session_management/src/session_management/: __init__.py
class11_20251102/session_management/src/session_management/advanced_sqlite_session/: README.md  __init__.py  main.py
class11_20251102/session_management/src/session_management/sqlalchemy_session/: README.md  __init__.py  main.py
class11_20251102/session_management/src/session_management/sqlite_session/: README.md  __init__.py  main.py
n8n-workflows/: 🎓 Learn JSON Basics with an Interactive Step-by-Step Tutorial for Beginners.json
quizzes/class01_20250817/: Readme.md
quizzes/class02_20250824/: Readme.md
quizzes/class03_20250831/: Readme.md
quizzes/class04_20250907/: Readme.md
quizzes/class05_20250914/: Readme.md
quizzes/class06_20250921/: Readme.md
quizzes/class07_20250928/: Readme.md
quizzes/prep/: 01_context_engineering_tutorial_quiz.md  02_six_part_prompting_framework_quiz.md  03_prompt_engineering_readme_quiz.md  04_prompt_context_engineering_level1_exam.md
(+64 files in other folders)
