[project]
name = "fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jahanzaib Tayyab", email = "jtayyab204@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fast-api = "fast_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
