[project]
name = "sync-vs-async-agent-execution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hassan Ali Khan", email = "73381969+hassan-ak@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.11",
]

[project.scripts]
run-sync = "sync_vs_async_agent_execution.main:run_sync"
run-async = "sync_vs_async_agent_execution.main:run_async"
run-sync-demo = "sync_vs_async_agent_execution.main:run_sync_demo"
run-async-demo = "sync_vs_async_agent_execution.main:run_async_demo"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
