[project]
name = "run-lifecycle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hassan Ali Khan", email = "73381969+hassan-ak@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.4.2",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
]

[project.scripts]
run-lifecycle = "run_lifecycle.main:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
